syntax = "proto3";

package connection.requester;

import "google/protobuf/timestamp.proto";
import "connection_common.proto";

option java_multiple_files = true;
option java_package = "org.ogf.nsi.grpc.connection.requester";
import "services.proto";

message ChildResult {
  int32 order = 1;
  string connection_id = 2;
  string provider_nsa = 3;
  string service_type = 4;
}

message QueryResultCriteria {
  int32 version = 1;
  common.Schedule schedule = 2;
  string service_type = 3;
  repeated ChildResult child = 4;
  oneof service_specific_messages {
    services.PointToPointService ptps = 5;
  }
}

message QueryResult {
  string connection_id = 1;
  string global_reservation_id = 2;
  string description = 3;
  repeated QueryResultCriteria criteria = 4;
  string requester_nsa = 5;
  common.ConnectionStates connection_states = 6;
  int64 notification_id = 7;
  int64 result_id = 8;
}

message GenericFailedRequest {
  common.Header header = 1;
  string connection_id = 2;
  common.ConnectionStates connection_states = 3;
  common.ServiceException service_exception = 4;
}

message ReservationConfirmCriteria {
  int32 version = 1;
  common.Schedule schedule = 2;
  string serviceType = 3;
  oneof service_specific_messages {
    services.PointToPointService ptps = 4;
  }
}

message ReserveConfirmedRequest {
  common.Header header = 1;
  string connection_id = 2;
  string global_reservation_id = 3;  // UUID
  string description = 4;
  ReservationConfirmCriteria criteria = 5;
}

message GenericConfirmedRequest {
  common.Header header = 1;
  string connection_id = 2; // URI
}

message ErrorRequest {
  common.Header header = 1;
  common.ServiceException service_exception = 2;
}

message ErrorEventRequest {
  common.Header header = 1;
  common.Notification notification = 2;
  common.EventType event = 3;
  string originating_connection_id = 4;
  string originating_nsa = 5;
  repeated common.TypeValuePair additional_info = 6;
  common.ServiceException service_exception = 7;
}

message DataPlaneStateChangeRequest {
  common.Header header = 1;
  common.Notification notification = 2;
  common.DataPlaneStatus data_plane_status = 3;
}

message ReserveTimeoutRequest {
  common.Header header = 1;
  common.Notification notification = 2;
  int32 timeout_value = 3;
  string originating_connection_id = 4;
  string originating_nsa = 5;
}

message MessageDeliveryTimeoutRequest {
  common.Header header = 1;
  common.Notification notification = 2;
  string correlation_id = 3;
}

message QueryConfirmedRequest {
  common.Header header = 1;
  repeated QueryResult reservation = 2;
  google.protobuf.Timestamp last_modified = 3;
}

message QueryNotificationConfirmedRequest {
  common.Header header = 1;
  repeated ErrorEventRequest error_event = 2;
  repeated ReserveTimeoutRequest reserve_timeout = 3;
  repeated DataPlaneStateChangeRequest data_plane_state_change = 4;
  repeated MessageDeliveryTimeoutRequest message_delivery_timeout = 5;
}

message ResultResponse {
  int64 result_id = 1;
  string correlation_id = 2;
  google.protobuf.Timestamp time_stamp = 3;
  oneof type {
    ReserveConfirmedRequest reserve_confirmed = 4;
    GenericFailedRequest reserve_failed = 5;
    GenericConfirmedRequest reserve_commit_confirmed = 6;
    GenericFailedRequest reserve_commit_failed = 7;
    GenericConfirmedRequest reserve_abort_confirmed = 8;
    GenericConfirmedRequest provision_confirmed = 9;
    GenericConfirmedRequest release_confirmed = 10;
    GenericConfirmedRequest terminate_confirmed = 11;
    ErrorRequest error = 12;
  }
}

message QueryResultConfirmedRequest {
  common.Header header = 1;
  repeated ResultResponse result = 2;
}

message QueryResultConfirmedResponse {
  common.Header header = 1;
}

service ConnectionRequester {
  rpc ReserveFailed(GenericFailedRequest) returns (common.GenericAcknowledgment);
  rpc ReserveConfirmed(ReserveConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc ReserveCommitConfirmed(GenericConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc ReserveCommitFailed(GenericFailedRequest) returns (common.GenericAcknowledgment);
  rpc ReserveAbortConfirmed(GenericConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc ProvisionConfirmed(GenericConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc ReleaseConfirmed(GenericConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc TerminateConfirmed(GenericConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc Error(ErrorRequest) returns (common.GenericAcknowledgment);
  rpc ErrorEvent(ErrorEventRequest) returns (common.GenericAcknowledgment);
  rpc DataPlaneStateChange(DataPlaneStateChangeRequest) returns (common.GenericAcknowledgment);
  rpc ReserveTimeout(ReserveTimeoutRequest) returns (common.GenericAcknowledgment);
  rpc MessageDeliveryTimeout(MessageDeliveryTimeoutRequest) returns (common.GenericAcknowledgment);
  rpc QuerySummaryConfirmed(QueryConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc QueryRecursiveConfirmed(QueryConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc QueryNotificationConfirmed(QueryNotificationConfirmedRequest) returns (common.GenericAcknowledgment);
  rpc QueryResultConfirmed(QueryResultConfirmedRequest) returns (QueryResultConfirmedResponse);
}
