/*
  Implement the Protocol Buffers equivalent of the `pathTrace` definition as specified in:

  Document: GFD-R-233 - "Applying Policy in the NSI environment".
 */

syntax = "proto3";

package policy;

option java_multiple_files = true;
option java_package = "org.ogf.nsi.grpc.policy";


message Segment {
  string id = 1;  // URI
  string connection_id = 2;  // UUID
  repeated string stps = 3;  // [StpId]
}

message Path {
  repeated Segment segments = 1;
}

message PathTrace {
  string id = 1;  // URI
  string connection_id = 2;  // UUID
  repeated Path paths = 3;
}
